--- a/package.json
+++ b/package.json
@@ -2,6 +2,17 @@
   "name": "app-webview-web",
   "private": true,
   "version": "1.0.0",
+  "browserslist": [
+    "last 2 Chrome versions",
+    "last 2 Firefox versions",
+    "last 2 Safari versions",
+    "last 2 Edge versions",
+    "last 2 ChromeAndroid versions",
+    "last 2 FirefoxAndroid versions",
+    "last 2 Samsung versions",
+    "iOS >= 15.5",
+    "Android >= 8.0"
+  ],
   "scripts": {
     "analyze": "ANALYZE=true next build",
     "build": "next build",
